src/snapshots/test_diff_hunks___a_b_c_nd_e_f_a_b_d_ne_f_g.snap
---
source: src/lib.rs
expression: hunks
---
[2;44;30m... ...   @@ -1,2 +1,2 @@[0m
[40;31m001      [1m-[0m[40;31m[0m[40;31m[2mA[0m[40;31m[2m [0m[40;31m[2mB[0m[40;31m[2m [0m[40;31m[7mC[0m[40;31m[0m
[40;31m002      [1m-[0m[40;31m[0m[40;31m[7mD[0m[40;31m[7m [0m[40;31m[2mE[0m[40;31m[2m [0m[40;31m[2mF[0m[40;31m[0m
[40;32m    001  [1m+[0m[40;32m[0m[40;32m[2mA[0m[40;32m[2m [0m[40;32m[2mB[0m[40;32m[2m [0m[40;32m[7mD[0m[40;32m[0m
[40;32m    002  [1m+[0m[40;32m[0m[40;32m[2mE[0m[40;32m[2m [0m[40;32m[2mF[0m[40;32m[7m [0m[40;32m[7mG[0m[40;32m[0m


