src/snapshots/test_diff_hunks___r_24638_twin_room_p1_3_a1_3_c0_2_fc0_9_0_1_mca0_3_13_13_dz_child_ages_2_3_4_6_7_12_r_24638_twin_room_p1_3_a1_3_c0_2_fc0_9_0_3_mca0_3_13_13_dz_child_ages_4_6_7_12.snap
---
source: src/lib.rs
expression: hunks
---
[2;44;30m... ...   @@ -1,2 +1,2 @@[0m
[40;31m001      [1m-[0m[40;31m[0m[40;31m[2m|[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m|[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m|[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m|[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m|[0m[40;31m[7m-[0m[40;31m[7m-[0m[40;31m[7m-[0m[40;31m[7m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[7m-[0m[40;31m[7m-[0m[40;31m[2m|[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m-[0m[40;31m[2m|[0m[40;31m[0m
[40;31m002      [1m-[0m[40;31m[0m[40;31m[2m|[0m[40;31m[2m [0m[40;31m[2m2[0m[40;31m[2m4[0m[40;31m[2m6[0m[40;31m[2m3[0m[40;31m[2m8[0m[40;31m[2m [0m[40;31m[2m|[0m[40;31m[2m [0m[40;31m[2mT[0m[40;31m[2mw[0m[40;31m[2mi[0m[40;31m[2mn[0m[40;31m[2m [0m[40;31m[2mR[0m[40;31m[2mo[0m[40;31m[2mo[0m[40;31m[2mm[0m[40;31m[2m [0m[40;31m[2m [0m[40;31m[2m [0m[40;31m[2m|[0m[40;31m[2m [0m[40;31m[2mP[0m[40;31m[2m1[0m[40;31m[2m:[0m[40;31m[2m3[0m[40;31m[2m [0m[40;31m[2mA[0m[40;31m[2m1[0m[40;31m[2m:[0m[40;31m[2m3[0m[40;31m[2m [0m[40;31m[2mC[0m[40;31m[2m0[0m[40;31m[2m:[0m[40;31m[2m2[0m[40;31m[2m [0m[40;31m[2mF[0m[40;31m[2mC[0m[40;31m[2m0[0m[40;31m[2m:[0m[40;31m[2m9[0m[40;31m[2m[[0m[40;31m[2m0[0m[40;31m[2m:[0m[40;31m[7m1[0m[40;31m[2m][0m[40;31m[2m [0m[40;31m[2mM[0m[40;31m[2mC[0m[40;31m[2mA[0m[40;31m[2m0[0m[40;31m[2m:[0m[40;31m[2m3[0m[40;31m[2m[[0m[40;31m[2m1[0m[40;31m[2m3[0m[40;31m[2m:[0m[40;31m[2m1[0m[40;31m[2m3[0m[40;31m[2m][0m[40;31m[2m [0m[40;31m[2m|[0m[40;31m[2m [0m[40;31m[2mD[0m[40;31m[2mZ[0m[40;31m[2m [0m[40;31m[2m [0m[40;31m[2m|[0m[40;31m[2m [0m[40;31m[2mc[0m[40;31m[2mh[0m[40;31m[2mi[0m[40;31m[2ml[0m[40;31m[2md[0m[40;31m[2m_[0m[40;31m[2ma[0m[40;31m[2mg[0m[40;31m[2me[0m[40;31m[2ms[0m[40;31m[2m:[0m[40;31m[2m[[0m[40;31m[2m"[0m[40;31m[7m2[0m[40;31m[7m:[0m[40;31m[7m3[0m[40;31m[7m"[0m[40;31m[7m,[0m[40;31m[7m"[0m[40;31m[2m4[0m[40;31m[2m:[0m[40;31m[2m6[0m[40;31m[2m"[0m[40;31m[2m,[0m[40;31m[2m"[0m[40;31m[2m7[0m[40;31m[2m:[0m[40;31m[2m1[0m[40;31m[2m2[0m[40;31m[2m"[0m[40;31m[2m][0m[40;31m[2m [0m[40;31m[2m|[0m[40;31m[2m [0m[40;31m[2m [0m[40;31m[2m [0m[40;31m[2m [0m[40;31m[2m [0m[40;31m[2m [0m[40;31m[2m [0m[40;31m[2m [0m[40;31m[2m [0m[40;31m[2m [0m[40;31m[2m [0m[40;31m[2m|[0m[40;31m[0m
[40;32m    001  [1m+[0m[40;32m[0m[40;32m[2m|[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m|[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m|[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m|[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m|[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m|[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m-[0m[40;32m[2m|[0m[40;32m[0m
[40;32m    002  [1m+[0m[40;32m[0m[40;32m[2m|[0m[40;32m[2m [0m[40;32m[2m2[0m[40;32m[2m4[0m[40;32m[2m6[0m[40;32m[2m3[0m[40;32m[2m8[0m[40;32m[2m [0m[40;32m[2m|[0m[40;32m[2m [0m[40;32m[2mT[0m[40;32m[2mw[0m[40;32m[2mi[0m[40;32m[2mn[0m[40;32m[2m [0m[40;32m[2mR[0m[40;32m[2mo[0m[40;32m[2mo[0m[40;32m[2mm[0m[40;32m[2m [0m[40;32m[2m [0m[40;32m[2m [0m[40;32m[2m|[0m[40;32m[2m [0m[40;32m[2mP[0m[40;32m[2m1[0m[40;32m[2m:[0m[40;32m[2m3[0m[40;32m[2m [0m[40;32m[2mA[0m[40;32m[2m1[0m[40;32m[2m:[0m[40;32m[2m3[0m[40;32m[2m [0m[40;32m[2mC[0m[40;32m[2m0[0m[40;32m[2m:[0m[40;32m[2m2[0m[40;32m[2m [0m[40;32m[2mF[0m[40;32m[2mC[0m[40;32m[2m0[0m[40;32m[2m:[0m[40;32m[2m9[0m[40;32m[2m[[0m[40;32m[2m0[0m[40;32m[2m:[0m[40;32m[7m3[0m[40;32m[2m][0m[40;32m[2m [0m[40;32m[2mM[0m[40;32m[2mC[0m[40;32m[2mA[0m[40;32m[2m0[0m[40;32m[2m:[0m[40;32m[2m3[0m[40;32m[2m[[0m[40;32m[2m1[0m[40;32m[2m3[0m[40;32m[2m:[0m[40;32m[2m1[0m[40;32m[2m3[0m[40;32m[2m][0m[40;32m[2m [0m[40;32m[2m|[0m[40;32m[2m [0m[40;32m[2mD[0m[40;32m[2mZ[0m[40;32m[2m [0m[40;32m[2m [0m[40;32m[2m|[0m[40;32m[2m [0m[40;32m[2mc[0m[40;32m[2mh[0m[40;32m[2mi[0m[40;32m[2ml[0m[40;32m[2md[0m[40;32m[2m_[0m[40;32m[2ma[0m[40;32m[2mg[0m[40;32m[2me[0m[40;32m[2ms[0m[40;32m[2m:[0m[40;32m[2m[[0m[40;32m[2m"[0m[40;32m[2m4[0m[40;32m[2m:[0m[40;32m[2m6[0m[40;32m[2m"[0m[40;32m[2m,[0m[40;32m[2m"[0m[40;32m[2m7[0m[40;32m[2m:[0m[40;32m[2m1[0m[40;32m[2m2[0m[40;32m[2m"[0m[40;32m[2m][0m[40;32m[2m [0m[40;32m[2m|[0m[40;32m[2m [0m[40;32m[2m [0m[40;32m[2m [0m[40;32m[2m [0m[40;32m[2m [0m[40;32m[2m [0m[40;32m[2m [0m[40;32m[2m [0m[40;32m[2m [0m[40;32m[2m [0m[40;32m[2m [0m[40;32m[2m|[0m[40;32m[0m


